--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,50 @@
         </button>
       </form>
     </div>
+
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <form #postFormUpdate="ngForm" (ngSubmit)="onUpdatePost(postFormUpdate.value)">
+        <div class="form-group" hidden>
+          <label for="title">Id</label>
+          <input
+            type="text"
+            class="form-control"
+            id="id"
+            required
+            ngModel
+            name="id"
+          />
+        </div>
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            required
+            ngModel
+            name="title"
+          />
+        </div>
+        <div class="form-group">
+          <label for="content">Content</label>
+          <textarea
+            class="form-control"
+            id="content"
+            required
+            ngModel
+            name="content"
+          ></textarea>
+        </div>
+        <button
+          class="btn btn-primary"
+          type="submit"
+          [disabled]="!postFormUpdate.valid"
+        >
+          Update Data
+        </button>
+      </form>
+    </div>
   </div>
   <hr />
   <div class="row">
@@ -50,8 +94,19 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p>No posts available!</p>
+    <div class="alert alert-danger" role="alert" *ngIf="error">
+      <h3>Error Occur!</h3>
+      <p>{{error.message}}</p>
+    </div>
+    <div class="spinner-border" style="width: 6rem; height: 6rem;" role="status" *ngIf="showLoading && !error"></div>
+    <div class="col-xs-12 col-md-6 col-md-offset-3" *ngIf="!showLoading">
+      <p *ngIf="loadedPosts.length < 1 && !showLoading">No posts available!</p>
+      <ul class="list-group" *ngIf="loadedPosts.length > 0">
+        <li class="list-group-item" *ngFor="let data of loadedPosts" (click)="onClickData(data)">
+          <h3>{{data.title}}</h3>
+          <p>{{data.content}}</p>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
